...
                        buttonToggle.toggle()
                    }, label: {
                        Image(uiImage: Asset.Images.addIconTeal.image)
                            .frame(width: headerIconSize, height: headerIconSize)
                    })
                    .buttonStyle(CircleButtonStyle(buttonColor: .white))
                    .accessibility(identifier: "addNewWallet") // use for ui testing
                }
            } body: {
                ScrollView(showsIndicators: true) {
                    VStack {
                        WalletOneCardCenterView(wallets: store.state.walletState.wallets)
                        
...
