...
        VStack(alignment: .leading) {
            TextFieldForm(
                label: L10n.Wallet.Label.walletName,
                placeholder: L10n.Wallet.Placeholder.enterWalletName,
                inputValue: $wallet.title
            )
            .accessibilityIdentifier("walletName") // use for ui test
            
            CurrencySelector
            
            WalletTypeSelector

            GoalField
...
