...
"wallet.placeholder.enter_your_initial_amount" = "Enter your initial amount";
"wallet.placeholder.select_wallet_currency" = "Select wallet currency";
"wallet.placeholder.select_wallet_type" = "Select wallet type";
"wallet.placeholder.target_date" = "DD / MM / YYYY";
"wallet.target.to_target_amount" = "to target amount";
"wallet.target.to_target_date" = "to target date";
"wallet.title.add_wallet" = "Add Wallet";
"wallet.title.my_wallet" = "My Wallets";
"wallet_type.budget" = "Budget";
"wallet_type.goal" = "Goal";
"wallet_type.savings" = "Savings";

"transactions_create_form_modal.button_title.apply" = "Apply";
...
